Fix the border in dark mode

--- a/static/style.css
+++ b/static/style.css
@@ -15,6 +15,7 @@
     --text-color: white;
     --button-bg-color: white;
     --button-fg-color: black;
+  --border-color: rgb(40, 50, 70);
   }
 }
 
